# mlops-rag-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  config.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start_mlflow.bat  test_langfuse.py  test_mlflow.py
.github/workflows/: ci.yml
data/: natural_language_rag_style_20.jsonl  natural_language_test_set_20.jsonl  reference_test_set_30.jsonl
docker/: Dockerfile.eval  Dockerfile.mlflow
docs/: pipeline_technique_detail.txt  rapport_experimentations.md
docs/ADR/: 0001-mlflow-sqlite-local.md  0006-docker-multistage-non-root.md  README.md
evaluation/: __init__.py  eval_ragas.py
experiments/: fram_test_responses.json  probe_query.py
monitoring/: prometheus.yml
pipeline/: __init__.py  langfuse_tracker.py  rag_client.py
scripts/: compare_baselines.py  setup_check.py
tests/: conftest.py  test_datasets.py  test_eval_ragas.py  test_langfuse_tracker.py  test_rag_client.py
